# shooter

./: .gitignore  Lista  pyproject.toml
src/: constants.py  main.py
src/models/: __init__.py  asteroid.py  bullet.py  enemy.py  explosion.py  game_sprite.py  player.py  table_score.py
