[tool.poetry]
name = "tirador"
version = "0.1.0"
description = ""
authors = ["Roberto D. Cazarin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
poethepoet = "^0.28.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format       = "ruff format"
check        = "ruff check"
check-static = "mypy"
start-game = "python ./src/main.py"